kube/app/arr/qbittorrent/qbittorrent.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: arr
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: 0.3.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      annotations:
        fluentbit.io/parser: "qbittorrent"
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      restartPolicy: Always
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: data
        nfs: # data folder is a mounted pre-existing NFS share, *not* a PV/PVC
          server: 192.168.1.200
          path: /volume1/Media/torrents
      - name: tunnel
        hostPath:
          path: /dev/net/tun
      - name: localtime
        hostPath:
          path: /etc/localtime
      containers:
      - envFrom:
        - configMapRef:
            name: qbittorrent-config
            optional: false
        - secretRef:
            name: vpn-credentials
            optional: false
        image: jovalle/qbittorrent-openvpn:v0.3.1
        imagePullPolicy: IfNotPresent
        name: qbittorrent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 8080
          name: web-ui
          protocol: TCP
        - containerPort: 6881
          name: torrent-tcp
          protocol: TCP
        - containerPort: 6881
          name: torrent-udp
          protocol: UDP
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /downloads
          name: data
        - mountPath: /config
          name: qbittorrent-config
        - name: tunnel
          mountPath: /dev/net/tun
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
